@@ -444,12 +444,7 @@ GtkItemFactoryEntry data_items[] = {
       VAR_SUMMARY, NULL, GNULL },
     { N_("/Variable/_Frequency distribution"), NULL, do_menu_op, 
       FREQ, NULL, GNULL },
-    { N_("/Variable/Frequency _plot"), NULL, NULL, 0, "<Branch>", GNULL },
-    { N_("/Variable/Frequency plot/_Simple"), NULL, do_freqplot, 0, NULL, GNULL },
-    { N_("/Variable/Frequency plot/Against _Normal"), NULL, do_freqplot, 
-      D_NORMAL, NULL, GNULL },
-    { N_("/Variable/Frequency plot/Against _Gamma"), NULL, do_freqplot, 
-      D_GAMMA, NULL, GNULL },
+    { N_("/Variable/Frequency _plot"), NULL, do_freqplot, 0, NULL, GNULL },
     { N_("/Variable/Estimated _density plot..."), NULL, do_kernel, 0, NULL, GNULL },
     { N_("/Variable/_Gini coefficient"), NULL, do_gini, 0, NULL, GNULL },
     { N_("/Variable/_Range-mean graph"), NULL, do_range_mean, 0, NULL, GNULL }, 
