@@ -1,28 +1,28 @@
 /* XPM */
 static char * mini_session_xpm[] = {
-"16 16 8 1",
+"16 16 9 1",
 " 	c None",
-".	c #FFFFFF",
-"+	c #000000",
+".	c #91989D",
+"+	c #FFFFFF",
 "@	c #333FCC",
 "#	c #020000",
 "$	c #1AA834",
-"%	c #C63527",
-"&	c #BC0707",
-"                ",
-"++++++++++++++++",
-"+............. +",
-"+.@@@.###.###. +",
-"+.@.@.#.#.#$#. +",
-"+.@@@.###.###. +",
-"+............. +",
-"+.@@@.+.+.+.+..+",
-"+.@%@.+++..+...+",
-"+.@@@.&+&.+.+..+",
-"+..............+",
-"+..............+",
-"+..............+",
-"+..............+",
-"++++++++++++++++",
-"                "};
-
+"%	c #000000",
+"&	c #C63527",
+"*	c #BC0707",
+"................",
+"................",
+".++++++++++++++.",
+".+@@@+###+###++.",
+".+@+@+#+#+#$#++.",
+".+@@@+###+###++.",
+".++++++++++++++.",
+".+@@@+%+%+%+%++.",
+".+@&@+%%%++%+++.",
+".+@@@+*%*+%+%++.",
+".++++++++++++++.",
+".++++++++++++++.",
+".++++++++++++++.",
+".++++++++++++++.",
+".++++++++++++++.",
+"................"};
