@@ -1,28 +1,23 @@
 /* XPM */
-static char *mini_sh_xpm[] = {
-/* width height num_colors chars_per_pixel */
-"    17    16       6            1",
-/* colors */
-"  c None s None",
-"# c #c0c0c0",
-"a c #000000",
-"b c #ffffff",
-"d c #808080",
-"e c #0000ff",
-/* pixels */
-"                 ",
-"aaaaaaaaaaaaaaaa ",
-"adddddddddddddda ",
-"adeeeeeeeeeeeeda ",
-"adddddddddddddda ",
-"adbbbbbbbbbbbbda ",
-"adbabbbbbbbbbbda ",
-"adbbabbbbbbbbbda ",
-"adbabbbbbbbbbbda ",
-"adbbbbbbbbbbbbda ",
-"adbbbbbbbbbbbbda ",
-"adbbbbbbbbbbbbda ",
-"adbbbbbbbbbbbbda ",
-"adddddddddddddda ",
-"aaaaaaaaaaaaaaaa ",
-"                 "};
+static char * mini_sh_xpm[] = {
+"16 16 4 1",
+" 	c None",
+".	c #91989D",
+"+	c #FFFFFF",
+"@	c #000000",
+"................",
+"................",
+".++++++++++++++.",
+".@@++++++++++++.",
+".+@@+++++++++++.",
+".@@++@@@+++++++.",
+".++++++++++++++.",
+".++++++++++++++.",
+".++++++++++++++.",
+".++++++++++++++.",
+".++++++++++++++.",
+".++++++++++++++.",
+".++++++++++++++.",
+".++++++++++++++.",
+".++++++++++++++.",
+"................"};
